--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,25 @@
   <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
-  <h1>Teste</h1>
+  <header>
+    
+  <div class="icon">ICON</div>
+
+        <!-- usar ul li-->
+  <div class="search">O que procuras?</div>
+  <div class="clientArea"></div>
+  <div class="cart"></div>
+  </header>
+
+  <div class="container-imagens">
+    <h1>IMAGENS DE PRODUTOS com 3 ou 4 slides</h1>
+  </div>
+  <div class="clearfix"></div>
+
+  <div class="promos"></div>
+
+
+
   <script src="/scripts/main.js"></script>
 </body>
 </html>
