--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     
-  <div class="icon">ICON</div>
+  <img src="img/logo.png" alt="logo">
 
         <!-- usar ul li-->
   <div class="search">O que procuras?</div>
