Páginas html + nav

--- a/src/home.html
+++ b/src/home.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="PT-pt">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Projeto Parte 1</title>
   <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
   <header>
     
-  <img src="img/logo.png" alt="logo">
+  <a href="home.html"><img src="images/logo.png" alt="logo"></a>
 
-        <!-- usar ul li-->
   <div class="search">O que procuras?</div>
   <div class="clientArea"></div>
   <div class="cart"></div>
+  <div class="clearfix"></div>
+  
+  <div class="navbar">
+    <ul>
+      <li><a href="empresa.html"><h2>Empresa</h2></a></li>
+      <li><a href="produtos.html"><h2>Produtos</h2></a></li>
+      <li><a href="servicos.html"><h2>Serviços</h2></a></li>
+      <li><a href="contactos.html"><h2>Contactos</h2></a></li>
+    </ul>
+  </div>
   </header>
 
   <div class="container-imagens">
@@ -25,7 +34,7 @@
 
   <div class="promos"></div>
 
-
+  <img src="images/pavLam.jpg" alt="">
 
   <script src="/scripts/main.js"></script>
 </body>
