--- a/src/home.html
+++ b/src/home.html
@@ -8,33 +8,57 @@
   <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
+  <!---->
   <header>
-    
-  <a href="home.html"><img src="images/logo.png" alt="logo"></a>
+    <a href="home.html"><img src="images/logo.png" alt="logo"></a>
 
-  <div class="search">O que procuras?</div>
-  <div class="clientArea"></div>
-  <div class="cart"></div>
-  <div class="clearfix"></div>
-  
-  <div class="navbar">
-    <ul>
-      <li><a href="empresa.html"><h2>Empresa</h2></a></li>
-      <li><a href="produtos.html"><h2>Produtos</h2></a></li>
-      <li><a href="servicos.html"><h2>Serviços</h2></a></li>
-      <li><a href="contactos.html"><h2>Contactos</h2></a></li>
-    </ul>
-  </div>
+    <div class="search">O que procuras?</div>
+    <div class="clientArea"></div>
+    <div class="cart"></div>
+    <div class="clearfix"></div>
+    
+    <div class="navbar">
+      <ul>
+        <li><a href="empresa.html"><h2>Empresa</h2></a></li>
+        <li><a href="produtos.html"><h2>Produtos</h2></a></li>
+        <li><a href="servicos.html"><h2>Serviços</h2></a></li>
+        <li><a href="contactos.html"><h2>Contactos</h2></a></li>
+      </ul>
+    </div>
   </header>
 
-  <div class="container-imagens">
-    <h1>IMAGENS DE PRODUTOS com 3 ou 4 slides</h1>
+<!-- Slide of images to show the best products-->
+  <div class="slide-images">
+    <img src="images/pavLam.jpg" alt="">
   </div>
   <div class="clearfix"></div>
 
-  <div class="promos"></div>
+  <div class="container-products">
+    <div class="floor">
+      <div class="comment"></div>
+    </div>
+    <div class="strips"></div>
+    <div class="videos"></div>
+  </div>
+  <div class="clearfix"></div>
 
-  <img src="images/pavLam.jpg" alt="">
+<!-- This is the section for sales -->
+  <div class="titlePromos">
+    <h1>As Melhores Pomoções!</h1>
+  </div>
+
+  <div class="sales">
+    <div class="promo"></div>
+    <div class="promo"></div>
+    <div class="promo"></div>
+    <div class="promo"></div>
+    <div class="promo"></div>
+    <div class="promo"></div>
+  </div>
+
+
+  <br><br><br><br><br><br>
+
 
   <script src="/scripts/main.js"></script>
 </body>
