--- a/src/Empresa.html
+++ b/src/Empresa.html
@@ -4,27 +4,48 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Projeto Parte 1</title>
+  <title>Empresa</title>
   <link rel="stylesheet" href="/styles/main.css">
+  <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
 </head>
 <body>
   <header>
-    
-  <a href="home.html"><img src="images/logo.png" alt="logo"></a>
+    <div class="container-header">
+      <a href="home.html"><img src="images/logo.png" alt="logo"></a>
 
-  <div class="search">O que procuras?</div>
-  <div class="clientArea"></div>
-  <div class="cart"></div>
-  <div class="clearfix"></div>
-  
-  <div class="navbar">
-    <ul>
-      <li><a href="empresa.html"><h2>Empresa</h2></a></li>
-      <li><a href="produtos.html"><h2>Produtos</h2></a></li>
-      <li><a href="servicos.html"><h2>Serviços</h2></a></li>
-      <li><a href="contactos.html"><h2>Contactos</h2></a></li>
-    </ul>
-  </div>
+      <div class="search">O que procuras?</div>
+      <div class="clientArea">
+        <span class="iconify" data-icon="bx:bxs-user" data-inline="false"></span>
+      </div>
+      <div class="cart">
+        <span class="iconify" data-icon="entypo:shopping-cart" data-inline="false"></span>
+      </div>
+      <div class="clearfix"></div>
+    </div>
+    <div class="navbar">
+      <ul>
+        <li>
+          <a href="empresa.html"><h3>Empresa</h3></a>
+        </li>
+        <li>
+          <a href="produtos.html"><h3>Produtos</h3></a>
+        </li>
+        <li>
+          <a href="servicos.html"><h3>Serviços</h3></a>
+        </li>
+        <li>
+          <a href="contactos.html"><h3>Contactos</h3></a>
+        </li>
+      </ul>
+    </div>
+    <div class="navbar-mobile">
+      <div class="login">
+
+      </div>
+    </div>
+    <div class="menu">
+      <h3>MENU</h3>
+    </div>
   </header>
 
 
