Create company page

--- a/src/index.html
+++ b/src/index.html
@@ -70,9 +70,9 @@
     <div class="titlePromos">
       <h1>As Melhores Pomoções!</h1>
     </div>
-    <div class="container-grid">
+    <div class="container">
       <div class="sales">
-        <div class="promo">1</div>
+        <div class="promo">1123</div>
         <div class="promo">2</div>
         <div class="promo">3</div>
         <div class="promo">4</div>
