create contacts page

--- a/src/Contactos.html
+++ b/src/Contactos.html
@@ -48,6 +48,88 @@
     </div>
   </header>
 
+  <main>
+    <div class="contactos">
+      <h1>CONTACTOS</h1>
+      <div class="sede">
+        <p>Sede, Fábrica e Dep. Técnico <br>
+          Estrada Nacional 3, Km. 5,9
+          Vila Nova da Rainha 
+          P - 2050-522<br> 
+          Aveiro <br>
+          <a href=""> Ver no Google Maps</a> <br> 
+          Telefone: +351 243 670 070 <br>
+          Telemóvel: +351 913 888 745 <br>
+          2ª a 6ª feira - das 9h00 às 18h00.</p>
+      </div>
+      <div class="lisboa">
+        <p>Sede, Fábrica e Dep. Técnico <br>
+          Estrada Nacional 3, Km. 5,9
+          Vila Nova da Rainha 
+          P - 2050-522<br> 
+          Aveiro <br>
+          <a href=""> Ver no Google Maps</a> <br> 
+          Telefone: +351 243 670 070 <br>
+          Telemóvel: +351 913 888 745 <br>
+          2ª a 6ª feira - das 9h00 às 18h00.</p>
+      </div>
+      <div class="porto">
+        <p>Sede, Fábrica e Dep. Técnico <br>
+          Estrada Nacional 3, Km. 5,9
+          Vila Nova da Rainha 
+          P - 2050-522<br> 
+          Aveiro <br>
+          <a href=""> Ver no Google Maps</a> <br> 
+          Telefone: +351 243 670 070 <br>
+          Telemóvel: +351 913 888 745 <br>
+          2ª a 6ª feira - das 9h00 às 18h00.</p>
+      </div>
+      <div class="icons">
+        <div class="youtube">
+          <a href="https://www.youtube.com">
+            <span class="iconify" data-icon="logos:youtube" data-inline="false"></span>
+          </a>
+        </div>
+        <div class="fabebook">
+          <a href="https://www.facebook.com">
+            <span class="iconify" data-icon="logos:facebook" data-inline="false"></span>
+          </a>
+        </div>
+        <div class="twitter">
+          <a href="https://www.twitter.com">
+            <span class="iconify" data-icon="logos:twitter" data-inline="false"></span>
+          </a>
+        </div>
+        <div class="https://www.linkedin.com/">
+          <span class="iconify" data-icon="logos:linkedin" data-inline="false"></span>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <footer>
+    <div class="footer">
+      <div class="contacts">
+        <h2>
+          <span class="iconify" data-icon="feather:phone" data-inline="false"></span> Apoio ao Cliente: <b>900 476 834</b>
+        </h2>
+        <br>
+        <h2>
+          <b><span class="iconify" data-icon="ant-design:mail-outlined" data-inline="false"></span> valencia.madeiras@gmail.com</b>
+        </h2>
+      </div>
+      <div>
+        <div class="policy">
+          <p><a href="">Termos e Condições Gerais</a>  <br>
+            <a href="">Política de Privacidade e Cookies</a>  <br>
+            <a href="">Recrutamento</a> 
+          </p>
+          
+        </div>
+      </div>
+    </div>
+</footer>
+
   <script src="/scripts/main.js"></script>
 </body>
 </html>
