add services and mediaQ to utilities

--- a/src/Contactos.html
+++ b/src/Contactos.html
@@ -53,35 +53,29 @@
       <h1>CONTACTOS</h1>
       <div class="sede">
         <p>Sede, Fábrica e Dep. Técnico <br>
-          Estrada Nacional 3, Km. 5,9
-          Vila Nova da Rainha 
-          P - 2050-522<br> 
+          Zona Industrial da Taboeira, 3800-555 Aveiro<br> 
           Aveiro <br>
-          <a href=""> Ver no Google Maps</a> <br> 
+          <a href="https://www.google.com/maps/place/Ascendi+Aveiro/@40.6448116,-8.6110346,15z/data=!4m5!3m4!1s0xd23989b96a0a86b:0x69fac027e55aaca9!8m2!3d40.6441857!4d-8.6012951"> Ver no Google Maps</a> <br> 
           Telefone: +351 243 670 070 <br>
           Telemóvel: +351 913 888 745 <br>
           2ª a 6ª feira - das 9h00 às 18h00.</p>
       </div>
       <div class="lisboa">
-        <p>Sede, Fábrica e Dep. Técnico <br>
-          Estrada Nacional 3, Km. 5,9
-          Vila Nova da Rainha 
-          P - 2050-522<br> 
-          Aveiro <br>
-          <a href=""> Ver no Google Maps</a> <br> 
-          Telefone: +351 243 670 070 <br>
-          Telemóvel: +351 913 888 745 <br>
+        <p>Lisboa <br>
+          R. Padre Luís Aparício 10, 1150-069 Lisboa<br> 
+          Lisboa <br>
+          <a href="https://www.google.com/maps/place/Markdata/@38.7255376,-9.1431316,18z/data=!4m8!1m2!2m1!1szona+industrial+lisboa!3m4!1s0xd19339ce0287033:0xda5b16432deb83e!8m2!3d38.7248291!4d-9.14298"> Ver no Google Maps</a> <br> 
+          Telefone: +351 213 490 070 <br>
+          Telemóvel: +351 912 568 895 <br>
           2ª a 6ª feira - das 9h00 às 18h00.</p>
       </div>
       <div class="porto">
-        <p>Sede, Fábrica e Dep. Técnico <br>
-          Estrada Nacional 3, Km. 5,9
-          Vila Nova da Rainha 
-          P - 2050-522<br> 
-          Aveiro <br>
-          <a href=""> Ver no Google Maps</a> <br> 
-          Telefone: +351 243 670 070 <br>
-          Telemóvel: +351 913 888 745 <br>
+        <p>Porto<br>
+          R. Manuel Pinto de Azevedo 662, 4100-320 Porto<br> 
+          Porto <br>
+          <a href="https://www.google.com/maps/place/Carglass%C2%AE+Porto+%E2%80%93+Zona+Industrial/@41.1725786,-8.6468661,16.56z/data=!4m8!1m2!2m1!1szona+industrial+porto!3m4!1s0xd24658d5dea4a77:0x2af7869ad75292d1!8m2!3d41.1751722!4d-8.6494897"> Ver no Google Maps</a> <br> 
+          Telefone: +351 229 580 970 <br>
+          Telemóvel: +351 923 567 845 <br>
           2ª a 6ª feira - das 9h00 às 18h00.</p>
       </div>
       <div class="icons">
