--- a/src/Servicos.html
+++ b/src/Servicos.html
@@ -48,6 +48,71 @@
     </div>
   </header>
 
+  <div class="servicesTittle">
+      <h1>Serviços</h1>
+      <p>Tutoriais e vídeos para aprender a realizar os seus projetos de bricolage!</p>
+  </div>
+
+  <div class="services">
+    <div class="section1">
+      <div class="description1 col-s-6">
+        <h2>PAVIMENTO FLUTUANTE</h2>
+        <p>Aprenda da forma mais fácil e eficaz a instalar o pavimento flutuante.</p>
+      </div>
+      <div class="videoWrapper col-s-6">
+        <iframe src="https://www.youtube.com/embed/hfNZw9OOyN4"></iframe>
+      </div>
+      </div>
+    <div class="clearfix"></div>
+    
+    <div class="section1">
+      <div class="videoWrapper col-s-6">
+        <iframe src="https://www.youtube.com/embed/uwaxpVPcjK4"></iframe>
+      </div>
+      <div class="description2 col-s-6">
+        <h2>REVESTIMENTO DE PAREDES</h2>
+        <p>Aprenda a fazer a melhor descoração das suas paredes interiores ou exteriores:</p>
+      </div>
+    </div>
+    <div class="clearfix"></div>
+
+    <div class="section1">
+      <div class="description3 col-s-6">
+        <h2>APLICAÇÃO DE RODAPÉS</h2>
+        <p>Elegância em cada canto da sua casa!</p>
+      </div>
+      <div class="videoWrapper col-s-6">
+        <iframe src="https://www.youtube.com/embed/FAjjenH9-ZI"></iframe>
+      </div>
+    </div>
+    <div class="clearfix"></div>
+
+
+  </div>
+
+  <footer>
+    <div class="footer">
+      <div class="contacts">
+        <h2>
+          <span class="iconify" data-icon="feather:phone" data-inline="false"></span> Apoio ao Cliente: <b>900 476 834</b>
+        </h2>
+        <br>
+        <h2>
+          <b><span class="iconify" data-icon="ant-design:mail-outlined" data-inline="false"></span> valencia.madeiras@gmail.com</b>
+        </h2>
+      </div>
+      <div>
+        <div class="policy">
+          <p><a href="">Termos e Condições Gerais</a>  <br>
+            <a href="">Política de Privacidade e Cookies</a>  <br>
+            <a href="">Recrutamento</a> 
+          </p>
+          
+        </div>
+      </div>
+    </div>
+</footer>
+
 
 
   <script src="/scripts/main.js"></script>
