add slides and header improve

--- a/src/Produtos.html
+++ b/src/Produtos.html
@@ -6,22 +6,26 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Produtos</title>
   <link rel="stylesheet" href="/styles/main.css">
-  <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
+  <script src="https://kit.fontawesome.com/fa63cbf539.js" crossorigin="anonymous"></script>
 </head>
 <body>
+  <!---->
   <header>
     <div class="container-header">
-      <a href="home.html"><img src="images/logo.png" alt="logo"></a>
-
-      <div class="search">O que procuras?</div>
-      <div class="clientArea">
-        <span class="iconify" data-icon="bx:bxs-user" data-inline="false"></span>
-      </div>
-      <div class="cart">
-        <span class="iconify" data-icon="entypo:shopping-cart" data-inline="false"></span>
-      </div>
+      <!--Logo-->
+      <a href="index.html"><img src="images/logo.png" alt="logo"></a>
+      <!--Search bar-->
+      <input class="search" type="text" name="search" placeholder="Search..">
+      <!---->
+      <span class="clientArea">
+        <i class="fas fa-user"></i>
+      </span>
+      <span class="cart">
+        <i class="fas fa-shopping-cart"></i>
+      </span>
+    </div>  
       <div class="clearfix"></div>
-    </div>
+    
     <div class="navbar">
       <ul>
         <li>
