--- a/src/index.html
+++ b/src/index.html
@@ -6,23 +6,28 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Projeto Parte 1</title>
   <link rel="stylesheet" href="/styles/main.css">
-  <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
+  <script src="https://kit.fontawesome.com/fa63cbf539.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <!---->
   <header>
     <div class="container-header">
-      <a href="home.html"><img src="images/logo.png" alt="logo"></a>
-
-      <div class="search">O que procuras?</div>
-      <div class="clientArea">
-        <span class="iconify" data-icon="bx:bxs-user" data-inline="false"></span>
+      <!--Logo-->
+      <a href="index.html"><img src="images/logo.png" alt="logo"></a>
+      <!--Search bar-->
+      <div class="search">
+        <input type="text" name="search" placeholder="Search..">
       </div>
-      <div class="cart">
-        <span class="iconify" data-icon="entypo:shopping-cart" data-inline="false"></span>
-      </div>
+      <!---->
+      <span class="clientArea">
+        <i class="fas fa-user"></i>
+      </span>
+      <span class="cart">
+        <i class="fas fa-shopping-cart"></i>
+      </span>
+    </div>  
       <div class="clearfix"></div>
-    </div>
+    
     <div class="navbar">
       <ul>
         <li>
@@ -51,9 +56,45 @@
 
   <main>
 <!-- Slide of images to show the best images of products-->
-    <div class="slide-images">
-      <img src="images/pavLam.jpg" alt="">
+<div class="slideshow-container">
+
+  <!-- Full-width images with number and caption text -->
+  <div class="mySlides fade">
+    <img src="images/pavLam2.jpg" style="width: 100%;">
+    <div class="text">
+      <h1>O Pavimento adequado para si!</h1>
     </div>
+  </div>
+
+  <div class="mySlides fade">
+    <img src="images/revMad.png" style="width: 100%;">
+    <div class="text">
+      <h1>Revestimentos de Decoração</h1>
+    </div>
+  </div>
+
+  <div class="mySlides fade">
+    <img src="images/rodape.jpg" style="width: 100%;">
+    <div class="text">
+      <h1>Ampla gama de Rodapés</h1>
+    </div>
+  </div>
+
+  <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
+
+<!-- The dots/circles -->
+  <div style="text-align: center;">
+    <span class="dot" onclick="currentSlide(1)"></span>
+    <span class="dot" onclick="currentSlide(2)"></span>
+    <span class="dot" onclick="currentSlide(3)"></span>
+  </div>
+
+
+
     <div class="clearfix"></div>
 
 <!-- Section with links to some pages -->
