tries to finish

--- a/src/Produtos.html
+++ b/src/Produtos.html
@@ -13,15 +13,24 @@
   <header>
     <div class="container-header">
       <!--Logo-->
-      <a href="index.html"><img src="images/logo.png" alt="logo"></a>
+      <div class="logo">
+        <a href="index.html">
+          <img src="images/logo.png" alt="logo">
+        </a>
+      </div>
       <!--Search bar-->
-      <input class="search" type="text" name="search" placeholder="Search..">
-      <!---->
+      <div class="search">
+        <input type="text" name="search" placeholder="Search..">
+      </div>
+      <!--User icon-->
       <span class="clientArea">
         <i class="fas fa-user"></i>
       </span>
+      <!--Cart icon-->
       <span class="cart">
-        <i class="fas fa-shopping-cart"></i>
+        <a href="cart.html">
+          <i class="fas fa-shopping-cart"></i>
+        </a>
       </span>
     </div>  
       <div class="clearfix"></div>
@@ -52,8 +61,168 @@
     </div>
   </header>
 
+  <div class="products">
+    <h1>PRODUTOS</h1>
+      <p>Propomos-lhe uma extensa gama de produtos em madeira e derivados. <br>
 
+      Escolhemos os melhores produtos e apontamos as melhores soluções para os seus projetos. <br>
 
-  <script src="/scripts/main.js"></script>
-</body>
-</html>
+<!-- Produtos - Placas -->
+    <div class="galleria-placas">
+      <div class="product-card col-xs-12 col-s-5 col-3">
+        <div class="product-tumb">
+          <img src="images/mdf.jpg" alt="placa mdf">
+        </div>
+        <div class="product-details">
+          <span class="product-catagory">Placas e painéis</span>
+          <h4><a href="">Placa Mdf</a></h4>
+          <div class="product-bottom-details">
+            <div class="product-price">€19,99</div>
+          </div>
+        </div>
+      </div>
+      <div class="product-card col-xs-12 col-s-5 col-3">
+        <div class="product-tumb">
+          <img src="images/osb.jpg" alt="placa Osb">
+        </div>
+        <div class="product-details">
+          <span class="product-catagory">Placas e painéis</span>
+          <h4><a href="">Placa Osb</a></h4>
+          <div class="product-bottom-details">
+            <div class="product-price">€19,99</div>
+          </div>
+        </div>
+      </div>
+      <div class="product-card col-xs-12 col-s-5 col-3">
+        <div class="product-tumb">
+          <img src="images/placapinho.jpg" alt="painel pinho">
+        </div>
+        <div class="product-details">
+          <span class="product-catagory">Placas e painéis</span>
+          <h4><a href="">Painel de Pinho</a></h4>
+          <div class="product-bottom-details">
+            <div class="product-price">€14,99</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="clearfix"></div>
+    <div class="productName">
+      <h2>Placas e Painéis</h2>
+    </div>
+<!-- Produtos - Rodapes -->
+    <div class="galleria-rodapes">
+      <div class="product-card col-xs-12 col-s-5 col-3">
+        <div class="product-tumb">
+          <img src="images/rodape1.jpg" alt="placa mdf">
+        </div>
+        <div class="product-details">
+          <span class="product-catagory">Rodapés</span>
+          <h4><a href="">Rodapé Castanho</a></h4>
+          <div class="product-bottom-details">
+            <div class="product-price">€4,99</div>
+          </div>
+        </div>
+      </div>
+      <div class="product-card col-xs-12 col-s-5 col-3">
+        <div class="product-tumb">
+          <img src="images/rodape2.jpg" alt="placa Osb">
+        </div>
+        <div class="product-details">
+          <span class="product-catagory">Rodapés</span>
+          <h4><a href="">Rodapé Castanho Claro</a></h4>
+          <div class="product-bottom-details">
+            <div class="product-price">€5,99</div>
+          </div>
+        </div>
+      </div>
+      <div class="product-card col-xs-12 col-s-5 col-3">
+        <div class="product-tumb">
+          <img src="images/rodape3.jpg" alt="painel pinho">
+        </div>
+        <div class="product-details">
+          <span class="product-catagory">Rodapés</span>
+          <h4><a href="">Pack Rodapé Branco</a></h4>
+          <div class="product-bottom-details">
+            <div class="product-price">€12,49</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="clearfix"></div>
+    <div class="productName">
+      <h2>Rodapés</h2>
+    </div>
+
+    <!-- Produtos - vinyl -->
+    <div class="galleria-pavimento">
+      <div class="product-card col-xs-12 col-s-5 col-3">
+        <div class="product-tumb">
+          <img src="images/pav1.jpg" alt="pavimento">
+        </div>
+        <div class="product-details">
+          <span class="product-catagory">Pavimento</span>
+          <h4><a href="">Pavimento Castanho</a></h4>
+          <div class="product-bottom-details">
+            <div class="product-price">€6,99m2</div>
+          </div>
+        </div>
+      </div>
+      <div class="product-card col-xs-12 col-s-5 col-3">
+        <div class="product-tumb">
+          <img src="images/pav2.jpg" alt="pavimento carvalho">
+        </div>
+        <div class="product-details">
+          <span class="product-catagory">Pavimento</span>
+          <h4><a href="">Pavimento Carvalho</a></h4>
+          <div class="product-bottom-details">
+            <div class="product-price">€5,99m2</div>
+          </div>
+        </div>
+      </div>
+      <div class="product-card col-xs-12 col-s-5 col-3">
+        <div class="product-tumb">
+          <img src="images/pav3.jpg" alt="pavimento branco">
+        </div>
+        <div class="product-details">
+          <span class="product-catagory">Pavimento</span>
+          <h4><a href="">Pavimento branco</a></h4>
+          <div class="product-bottom-details">
+            <div class="product-price">€8,49m2</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="clearfix"></div>
+    <div class="productName">
+      <h2>Pavimentos</h2>
+    </div>
+
+  </div>
+
+  <footer>
+    <div class="footer">
+      <div class="contacts">
+        <h2>
+          <span class="iconify" data-icon="feather:phone" data-inline="false"></span> Apoio ao Cliente: <b>900 476 834</b>
+        </h2>
+        <br>
+        <h2>
+          <b><span class="iconify" data-icon="ant-design:mail-outlined" data-inline="false"></span> valencia.madeiras@gmail.com</b>
+        </h2>
+      </div>
+      <div>
+        <div class="policy">
+          <p><a href="">Termos e Condições Gerais</a>  <br>
+            <a href="">Política de Privacidade e Cookies</a>  <br>
+            <a href="">Recrutamento</a> 
+          </p>
+          
+        </div>
+      </div>
+    </div>
+  </footer>
+  
+    <script src="/scripts/main.js"></script>
+  </body>
+  </html>
