--- a/src/Contactos.html
+++ b/src/Contactos.html
@@ -7,21 +7,31 @@
   <title>Contactos</title>
   <link rel="stylesheet" href="/styles/main.css">
   <script src="https://kit.fontawesome.com/fa63cbf539.js" crossorigin="anonymous"></script>
+  <script src="https://code.iconify.design/1/1.0.5/iconify.min.js"></script>
 </head>
 <body>
   <!---->
   <header>
     <div class="container-header">
       <!--Logo-->
-      <a href="index.html"><img src="images/logo.png" alt="logo"></a>
+      <div class="logo">
+        <a href="index.html">
+          <img src="images/logo.png" alt="logo">
+        </a>
+      </div>
       <!--Search bar-->
-      <input class="search" type="text" name="search" placeholder="Search..">
-      <!---->
+      <div class="search">
+        <input type="text" name="search" placeholder="Search..">
+      </div>
+      <!--User icon-->
       <span class="clientArea">
         <i class="fas fa-user"></i>
       </span>
+      <!--Cart icon-->
       <span class="cart">
-        <i class="fas fa-shopping-cart"></i>
+        <a href="cart.html">
+          <i class="fas fa-shopping-cart"></i>
+        </a>
       </span>
     </div>  
       <div class="clearfix"></div>
