--- a/src/cart.html
+++ b/src/cart.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Serviços</title>
+  <title>Projeto Parte 1</title>
   <link rel="stylesheet" href="/styles/main.css">
   <script src="https://kit.fontawesome.com/fa63cbf539.js" crossorigin="anonymous"></script>
 </head>
@@ -51,57 +51,55 @@
         </li>
       </ul>
     </div>
-    <div class="navbar-mobile">
-      <div class="login">
 
-      </div>
-    </div>
     <div class="menu">
       <h3>MENU</h3>
     </div>
+    <div class="navbar-mobile">
+      <ul>
+        <li>
+          <a href="empresa.html"><h3>Empresa</h3></a>
+        </li>
+        <li>
+          <a href="produtos.html"><h3>Produtos</h3></a>
+        </li>
+        <li>
+          <a href="servicos.html"><h3>Serviços</h3></a>
+        </li>
+        <li>
+          <a href="contactos.html"><h3>Contactos</h3></a>
+        </li>
+      </ul>
+    </div>
+    </div>
   </header>
 
-  <div class="servicesTittle">
-      <h1>Serviços</h1>
-      <p>Tutoriais e vídeos para aprender a realizar os seus projetos de bricolage!</p>
-  </div>
+  <div class="cartPage" data-value="5">
+    <h1>Carrinho de compras</h1>
 
-  <div class="services">
-    <div class="section1">
-      <div class="description1 col-s-6">
-        <h2>PAVIMENTO FLUTUANTE</h2>
-        <p>Aprenda da forma mais fácil e eficaz a instalar o pavimento flutuante.</p>
+    <div class="totals">
+      <div class="totals-item">
+        <label>Subtotal</label>
+        <div class="totals-value subtotal" data-value="45.70">45.70</div>
       </div>
-      <div class="videoWrapper col-s-6">
-        <iframe src="https://www.youtube.com/embed/hfNZw9OOyN4"></iframe>
+      <div class="totals-item">
+        <label>IVA (23%)</label>
+        <div class="totals-value">10.51</div>
       </div>
+      <div class="totals-item">
+        <label>Portes</label>
+        <div class="totals-value shippingValue" data-value="15">15.00</div>
       </div>
-    <div class="clearfix"></div>
-    
-    <div class="section1">
-      <div class="videoWrapper col-s-6">
-        <iframe src="https://www.youtube.com/embed/uwaxpVPcjK4"></iframe>
-      </div>
-      <div class="description2 col-s-6">
-        <h2>REVESTIMENTO DE PAREDES</h2>
-        <p>Aprenda a fazer a melhor descoração das suas paredes interiores ou exteriores:</p>
+      <div class="totals-item totals-item-total">
+        <label>Total</label>
+        <div class="totals-value">71.2 (Eur)</div>
       </div>
     </div>
-    <div class="clearfix"></div>
-
-    <div class="section1">
-      <div class="description3 col-s-6">
-        <h2>APLICAÇÃO DE RODAPÉS</h2>
-        <p>Elegância em cada canto da sua casa!</p>
-      </div>
-      <div class="videoWrapper col-s-6">
-        <iframe src="https://www.youtube.com/embed/FAjjenH9-ZI"></iframe>
-      </div>
-    </div>
-    <div class="clearfix"></div>
-
-
+      
+    <button class="buy">Comprar</button>
   </div>
+
+  <div class="clearfix"></div>
 
   <footer>
     <div class="footer">
@@ -124,10 +122,8 @@
         </div>
       </div>
     </div>
-</footer>
-
-
-
-  <script src="/scripts/main.js"></script>
-</body>
-</html>
+  </footer>
+  
+    <script src="/scripts/main.js"></script>
+  </body>
+  </html>
