--- a/src/Contactos.html
+++ b/src/Contactos.html
@@ -52,13 +52,25 @@
         </li>
       </ul>
     </div>
-    <div class="navbar-mobile">
-      <div class="login">
-
-      </div>
-    </div>
+    
     <div class="menu">
       <h3>MENU</h3>
+    </div>
+    <div class="navbar-mobile">
+      <div class="dropdown">
+        <div class="dropdown-content">
+          <a href="empresa.html">Empresa</a>
+        </div>
+        <div class="dropdown-content">
+          <a href="produtos.html">Produtos</a>
+        </div>
+        <div class="dropdown-content">
+          <a href="servicos.html">Serviços</a>
+        </div>
+        <div class="dropdown-content">
+          <a href="contactos.html">Contactos</a>
+        </div>
+      </div>
     </div>
   </header>
 
