--- a/src/cart.html
+++ b/src/cart.html
@@ -51,26 +51,25 @@
         </li>
       </ul>
     </div>
-
+    
     <div class="menu">
       <h3>MENU</h3>
     </div>
     <div class="navbar-mobile">
-      <ul>
-        <li>
-          <a href="empresa.html"><h3>Empresa</h3></a>
-        </li>
-        <li>
-          <a href="produtos.html"><h3>Produtos</h3></a>
-        </li>
-        <li>
-          <a href="servicos.html"><h3>Serviços</h3></a>
-        </li>
-        <li>
-          <a href="contactos.html"><h3>Contactos</h3></a>
-        </li>
-      </ul>
-    </div>
+      <div class="dropdown">
+        <div class="dropdown-content">
+          <a href="empresa.html">Empresa</a>
+        </div>
+        <div class="dropdown-content">
+          <a href="produtos.html">Produtos</a>
+        </div>
+        <div class="dropdown-content">
+          <a href="servicos.html">Serviços</a>
+        </div>
+        <div class="dropdown-content">
+          <a href="contactos.html">Contactos</a>
+        </div>
+      </div>
     </div>
   </header>
 
